# daily-briefing

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  PLAN.md  README.md  SKILL.md  brief.example.yaml  brief.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
.hermes/plans/: 2026-06-16_201500-docker-hermes-mode.md
daily_briefing/: __init__.py  __main__.py  cli.py  config.py  doctor.py  orchestrator.py  scheduler.py  setup_wizard.py
daily_briefing/delivery/: __init__.py  base.py
daily_briefing/delivery/senders/: ntfy.py  stdout.py  telegram.py
daily_briefing/sources/: bahn.py  base.py  calendar.py  email.py  github.py  news.py  reddit.py  weather.py
daily_briefing/storage/: history.py
daily_briefing/summarizer/: __init__.py  base.py  prompts.py
daily_briefing/summarizer/locales/: __init__.py  de.yaml  en.yaml
daily_briefing/summarizer/providers/: anthropic.py  ollama_.py  openai_.py  prompt_only.py
docs/: source-authoring.md  usage.md
docs/superpowers/plans/: 2026-06-16-p1-remove-personal-defaults.md  2026-06-16-p10-site-updates.md  2026-06-16-p2-summarizer-protocol.md  2026-06-16-p3-delivery-protocol.md  2026-06-16-p4-environment-i18n.md  2026-06-16-p5-entry-point-discovery.md  2026-06-16-p6-cli-product.md  2026-06-16-p8-variants.md  2026-06-16-p9-documentation.md
docs/superpowers/specs/: 2026-06-16-product-generalization-design.md
examples/daily-briefing-source-example/: README.md  pyproject.toml
examples/daily-briefing-source-example/src/daily_briefing_source_example/: __init__.py  source.py
integrations/: __init__.py
integrations/hermes/: __init__.py  briefing_skill.py
site/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
site/.vercel/: project.json
site/src/: main.js
site/src/styles/: main.css
tests/: conftest.py  test_cli.py  test_config.py  test_delivery.py  test_delivery_telegram.py  test_doctor.py  test_hermes_skill.py  test_history.py  test_locales.py  test_orchestrator.py  test_plugins.py  test_prompts.py  test_scheduler.py  test_setup.py  test_sources_bahn.py  test_sources_base.py  test_sources_calendar.py  test_sources_news.py  test_sources_reddit.py  test_sources_weather.py  test_variants.py
