[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "daily-briefing"
version = "0.1.0"
description = "AI-powered morning briefing — weather, calendar, GitHub, commute, and news in one WhatsApp message"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["daily_briefing*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
