[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-briefing"
version = "0.1.0"
description = "AI-powered morning briefing — weather, calendar, GitHub, commute, and news in one message"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
calendar = ["google-api-python-client>=2.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ollama = ["requests>=2.31"]  # already in core
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
    "daily-briefing[calendar]",
]

[tool.setuptools.packages.find]
include = ["daily_briefing*"]

[project.entry-points."daily_briefing.sources"]
weather = "daily_briefing.sources.weather:WeatherSource"
github = "daily_briefing.sources.github:GitHubSource"
calendar = "daily_briefing.sources.calendar:CalendarSource"
bahn = "daily_briefing.sources.bahn:BahnSource"
reddit = "daily_briefing.sources.reddit:RedditSource"
news = "daily_briefing.sources.news:NewsSource"
email = "daily_briefing.sources.email:EmailSource"

[project.scripts]
daily-briefing = "daily_briefing.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
