[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-briefing-source-example"
version = "0.1.0"
description = "Daily Briefing source — Quote of the Day (example third-party package)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."daily_briefing.sources"]
quote = "daily_briefing_source_example.source:QuoteSource"
